# rad-figma-automation

./: figma.py  pyproject.toml
